--- a/certificate.html
+++ b/certificate.html
@@ -64,23 +64,23 @@
 
   <div class="certificate-grid">
 
-    <div class="certificate-card"><img src="image/sertif/2025/mysql.png"><span>AlwaysNgoding : MySQL</span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/SV/1.png"><span>Skillvul : Algorithm & Data Structures with Python</span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/SV/3.png"><span>Skillvul : Python Dasar </span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/SV/4.png"><span>Skillvul : Python Lanjutan</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/mysql.png"><span>AlwaysNgoding : MySQL | Jul 2025</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/SV/1.png"><span>Skillvul : Algorithm & Data Structures with Python | Aug 2025</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/SV/3.png"><span>Skillvul : Python Dasar | Jul 2025 </span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/SV/4.png"><span>Skillvul : Python Lanjutan | Jul 2025</span></div>
 
-    <div class="certificate-card"><img src="image/sertif/2025/datascien.png"><span>DQLAB : Introduction to Data Science with Python</span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/gc/gc1.png"><span>Google Cloud : Analyze BigQuery Data in Connected Sheets</span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/gc/gc3.png"><span>Google Cloud : Build a Data Warehouse with BigQuery</span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/gc/gc4.png"><span>Google Cloud : Cloud Architecture: Design, Implement, and Manage</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/datascien.png"><span>DQLAB : Introduction to Data Science with Python | Aug 2025</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/gc/gc1.png"><span>Google Cloud : Analyze BigQuery Data in Connected Sheets | Aug 2025</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/gc/gc3.png"><span>Google Cloud : Build a Data Warehouse with BigQuery | Aug 2025</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/gc/gc4.png"><span>Google Cloud : Cloud Architecture: Design, Implement, and Manage | Aug 2025</span></div>
 
-    <div class="certificate-card"><img src="image/sertif/2025/gc/gc5.png"><span>Google Cloud : Derive Insights from BigQuery Data</span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/gc/gc6.png"><span>Google Cloud : Gemini for Data Scientist and Analysts</span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/gc/gc7.png"><span>Google Cloud : Implement Cloud Security Fundamentals on Google Cloud</span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/HR/HR1.png"><span>HACKERRANK : SQL (BASIC)</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/gc/gc5.png"><span>Google Cloud : Derive Insights from BigQuery Data | Aug 2025</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/gc/gc6.png"><span>Google Cloud : Gemini for Data Scientist and Analysts | Aug 2025</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/gc/gc7.png"><span>Google Cloud : Implement Cloud Security Fundamentals on Google Cloud | Aug 2025</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/HR/HR1.png"><span>HACKERRANK : SQL (BASIC) | Sep 2025</span></div>
     
-    <div class="certificate-card"><img src="image/sertif/2025/HR/HR2.png"><span>HACKERRANK : SQL (INTERMEDIATE)</span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/HR/HR3.png"><span>HACKERRANK : SQL (ADVANCED)</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/HR/HR2.png"><span>HACKERRANK : SQL (INTERMEDIATE) | Sep 2025</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/HR/HR3.png"><span>HACKERRANK : SQL (ADVANCED) | Sep 2025</span></div>
 
   </div>
 
@@ -92,13 +92,13 @@
 
   <div class="certificate-grid">
 
-    <div class="certificate-card"><img src="image/sertif/2023/javascript.png"><span>Dicoding : Belajar Pemrograman Dasar JavaScript</span></div>
-    <div class="certificate-card"><img src="image/sertif/2023/imkom.png"><span>IMKOM Yogyakarta : Design Web</span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/php.png"><span>AlwaysNgoding : PHP</span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/SV/5.png"><span>Skillvul : React Dasar</span></div>
+    <div class="certificate-card"><img src="image/sertif/2023/javascript.png"><span>Dicoding : Belajar Pemrograman Dasar JavaScript | Jul 2023</span></div>
+    <div class="certificate-card"><img src="image/sertif/2023/imkom.png"><span>IMKOM Yogyakarta : Design Web | Sep 2023</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/php.png"><span>AlwaysNgoding : PHP | Jul 2025</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/SV/5.png"><span>Skillvul : React Dasar | Jul 2025</span></div>
 
-    <div class="certificate-card"><img src="image/sertif/2025/gc/gc2.png"><span>Google Cloud : Application Design and Delivery</span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/SE.png"><span>MINI-COURSE : REVOU SOFTWARE ENGINEERING</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/gc/gc2.png"><span>Google Cloud : Application Design and Delivery | Aug 2025</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/SE.png"><span>MINI-COURSE : REVOU SOFTWARE ENGINEERING | Aug 2025</span></div>
 
   </div>
 </section>
@@ -109,9 +109,9 @@
 
   <div class="certificate-grid">
 
-    <div class="certificate-card"><img src="image/sertif/2023/toefl.png"><span>TOEFL/EPT | EXP 1/4/2024</span></div>
-    <div class="certificate-card"><img src="image/sertif/2023/ec2.png"><span>English Cafe : Level 2</span></div>
-    <div class="certificate-card"><img src="image/sertif/2023/ec3.png"><span>English Cafe : Level 3</span></div>
+    <div class="certificate-card"><img src="image/sertif/2023/toefl.png"><span>TOEFL/EPT | Apr 2023 (EXP 2024)</span></div>
+    <div class="certificate-card"><img src="image/sertif/2023/ec2.png"><span>English Cafe : Level 2 | Sep 2023 </span></div>
+    <div class="certificate-card"><img src="image/sertif/2023/ec3.png"><span>English Cafe : Level 3 | Okt 2023</span></div>
 
   </div>
 </section>
@@ -122,8 +122,8 @@
 
   <div class="certificate-grid">
 
-    <div class="certificate-card"><img src="image/sertif/2023/MOS.png"><span>MICROSOFT OFFICE SPESIALIST : WORD 2019</span></div>
-    <div class="certificate-card"><img src="image/sertif/2025/SV/2.png"><span>Skillvul : Internet of Things (IoT) - Fundamentals</span></div>
+    <div class="certificate-card"><img src="image/sertif/2023/MOS.png"><span>MICROSOFT OFFICE SPESIALIST : WORD 2019 | Feb 2023</span></div>
+    <div class="certificate-card"><img src="image/sertif/2025/SV/2.png"><span>Skillvul : Internet of Things (IoT) - Fundamentals | Jul 2025</span></div>
 
   </div>
 </section>
