--- a/index.html
+++ b/index.html
@@ -273,6 +273,51 @@
   </div>
 </section>
 
+<!------------------------------------------------------------------------------------------------------------>
+
+<!-- GARIS PEMBATAS -->
+<hr class="section-divider">
+
+<!-- SECTION TITLE -->
+<div class="section-header">
+  <img src="image/validasi.webp" alt="logo" width="35">
+  <h1 class="section-title">Others</h1>
+</div>
+
+<!------------------------------------------------------------------------------------------------------------>
+
+
+<section class="gaming-section">
+  <div class="gaming-box">
+
+    <div class="gaming-left">
+      <img src="image/ml.jpg" alt="Mobile Legends Gaming">
+    </div>
+
+    <div class="gaming-right">
+      <h2>Professional Gaming</h2>
+      <h3>Mobile Legends: Bang Bang</h3>
+
+      <p class="gaming-desc">
+        Competitive Mobile Legends player with strong teamwork, decision making,
+        and objective oriented gameplay.
+      </p>
+
+      <ul class="gaming-list">
+        <li><span>Username:</span> noobmaster69</li>
+        <li><span>ID:</span> 428170255 (9935)</li>
+        <li><span>Role:</span> Gold Lane / Roaming</li>
+        <li><span>Hero:</span> Edith, Hanabi, Zetian</li>
+        <li><span>Playstyle:</span> Aggressive & Smart Rotation</li>
+        <li><span>High Rank:</span> 55 stars Mythical Glory</li>
+        <li><span>High Achievment:</span> TOP 5 Edith West Nusra</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+
+
 
 <!------------------------------------------------------------------------------------------------------------>
 
