--- a/index.html
+++ b/index.html
@@ -311,6 +311,8 @@
         <li><span>Playstyle:</span> Aggressive & Smart Rotation</li>
         <li><span>High Rank:</span> 55 stars Mythical Glory</li>
         <li><span>High Achievment:</span> TOP 5 Edith West Nusra</li>
+        <li><span>Play Match (Rank):</span> 5200</li>
+        <li><span>Win Rate (Rank):</span> 50.3%</li>
       </ul>
     </div>
   </div>
