--- a/mini_project.html
+++ b/mini_project.html
@@ -196,7 +196,7 @@
           Tugas Kuliah bersama rekan mendesign/membuat sebuah produk aplikasi dimana kami menampilkan visual/design dan menjelaskan fitur agar user mudah untuk menggunakan.
         </p>
 
-        <span class="project-tech">React Dasar</span>
+        <span class="project-tech">Figma • Game • FlyingBirds• UI/UX</span>
 
         <div class="project-links">
           <a href="https://www.figma.com/design/JiuCjeWyYMGcTtqPDEGukq/FlyingBirds?node-id=0-1&t=0xrC2uP8UsLX8AYw-1"
