--- a/mini_project.html
+++ b/mini_project.html
@@ -215,7 +215,7 @@
 
 <!-- Kategori dua -->
 <div class="project-header">
-  <h1 class="project-title">Databases/Visualisasi</h1>
+  <h1 class="project-title">Databases/Data Analysis/Data Visualisasi</h1>
   <span class="project-line"></span>
 </div>
 
