--- a/certificate.html
+++ b/certificate.html
@@ -60,7 +60,7 @@
 
 
 <section class="certificate-section">
-  <h2 class="certificate-year">Data/Databases</h2>
+  <h2 class="certificate-year">Data/Databases/Artificial Intelligence(AI)</h2>
 
   <div class="certificate-grid">
 
