--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
     <span class="tag">#SLA</span>
     <span class="tag">#ProblemSolving</span>
     <span class="tag">#AnalyticalThinking</span>
+    <span class="tag">#DataAnalyst</span>
     <span class="tag">#EffectiveCommunication</span>
     <span class="tag">#FastLearner</span>
     <span class="tag">#TechnicalDocumentation</span>
