--- a/certificate.html
+++ b/certificate.html
@@ -82,6 +82,7 @@
     <div class="certificate-card"><img src="image/sertif/2025/HR/HR2.png"><span>HACKERRANK : SQL (INTERMEDIATE) | Sep 2025</span></div>
     <div class="certificate-card"><img src="image/sertif/2025/HR/HR3.png"><span>HACKERRANK : SQL (ADVANCED) | Sep 2025</span></div>
     <div class="certificate-card"><img src="image/sertif/2026/Dicoding/Dasar AI.png"><span>Dicoding : Belajar Dasar AI | Feb 2026</span></div>
+    <div class="certificate-card"><img src="image/sertif/2026/Dicoding/Python.png"><span>Dicoding : Memulai Pemrograman dengan Python | Feb 2026</span></div>
 
 
   </div>
