--- a/certificate.html
+++ b/certificate.html
@@ -59,8 +59,9 @@
 <!------------------------------------------------------------------------------------------------------------>
 
 
+
 <section class="certificate-section">
-  <h2 class="certificate-year">Data/Databases/Artificial Intelligence(AI)</h2>
+  <h2 class="certificate-year">Data/Databases</h2>
 
   <div class="certificate-grid">
 
@@ -81,9 +82,7 @@
     
     <div class="certificate-card"><img src="image/sertif/2025/HR/HR2.png"><span>HACKERRANK : SQL (INTERMEDIATE) | Sep 2025</span></div>
     <div class="certificate-card"><img src="image/sertif/2025/HR/HR3.png"><span>HACKERRANK : SQL (ADVANCED) | Sep 2025</span></div>
-    <div class="certificate-card"><img src="image/sertif/2026/Dicoding/Dasar AI.png"><span>Dicoding : Belajar Dasar AI | Feb 2026</span></div>
-    <div class="certificate-card"><img src="image/sertif/2026/Dicoding/Python.png"><span>Dicoding : Memulai Pemrograman dengan Python | Feb 2026</span></div>
-
+    
 
   </div>
 
@@ -102,6 +101,20 @@
 
     <div class="certificate-card"><img src="image/sertif/2025/gc/gc2.png"><span>Google Cloud : Application Design and Delivery | Aug 2025</span></div>
     <div class="certificate-card"><img src="image/sertif/2025/SE.png"><span>MINI-COURSE : REVOU SOFTWARE ENGINEERING | Aug 2025</span></div>
+
+  </div>
+</section>
+
+
+<section class="certificate-section">
+  <h2 class="certificate-year">AI Engineering</h2>
+
+  <div class="certificate-grid">
+
+    <div class="certificate-card"><img src="image/sertif/2026/Dicoding/Dasar AI.png"><span>Dicoding : Belajar Dasar AI | Feb 2026</span></div>
+    <div class="certificate-card"><img src="image/sertif/2026/Dicoding/Python.png"><span>Dicoding : Memulai Pemrograman dengan Python | Feb 2026</span></div>
+    <div class="certificate-card"><img src="image/sertif/2026/Dicoding/ML.png"><span>Dicoding : Belajar Machine Learning untuk Pemula | Feb 2026</span></div>
+
 
   </div>
 </section>
